Changelog for collective.editskinswitcher
=========================================

1.7 (unreleased)
----------------

- Nothing changed yet.


1.6 (2011-06-11)
----------------

- Also set the theme specific browser layers when switching skins.
  Code heavily inspired by themetweaker.themeswitcher. [markvl]


1.5 (2011-01-04)
----------------

- Always show the Styles menu when the user has the "Set navigation
  root" permission.
  [maurits]

- Check our permissions on the folder when we are on a default page.
  This might give a difference.
  [maurits]


1.4 (2010-12-31)
----------------

- Added menu item to set the context as a navigation root
  (plone.app.layout.navigation.interfaces.INavigationRoot) guarded by
  new permission "Set navigation root", by default only for Manager.
  [maurits]


1.3 (2010-12-14)
----------------

- Do not show the Styles menu when there are no styles to choose.
  [maurits]

- Moved PAGE_WHITE_LIST and SUFFIX_WHITE_LIST from traversal.py to new
  config.py.
  [maurits]

- Added SUFFIX_WHITE_LIST to avoid triggering a forced login for css
  or javascript files, otherwise the login form will look ugly.  Also
  added logo.jpg/png/gif and favicon.ico to the PAGE_WHITE_LIST for
  the same reason.
  [maurits]


1.2 (2010-12-07)
----------------

- Do not force logging in when you get this header for a login page
  (specified by the PAGE_WHITE_LIST).
  [maurits]


1.1 (2010-12-07)
----------------

- Use ``get_header`` instead of ``get`` when looking for headers to
  force logging in or force using the edit skin.
  [maurits]

- Allow setting a default skin on a folder, using the new Styles
  context menu.
  [dreamcatcher]


1.0 (2010-06-07)
----------------

- Fix: when we need authentication and we are anonymous then we do
  *not* want to switch: we want to have the default behaviour of
  getting the standard skin instead of the edit skin.  Added some more
  inline documentation.
  [maurits]
